add apply SEO, favicon, update etc...

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
+		<!-- https://realfavicongenerator.net - generated at 2025-05-21 -->
+		<link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96"/>
+		<link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg"/>
+		<link rel="shortcut icon" href="/favicons/favicon.ico"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png"/>
+		<meta name="apple-mobile-web-app-title" content="Web Portfolio"/>
+		<link rel="manifest" href="/favicons/site.webmanifest"/>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=10, user-scalable=yes, shrink-to-fit=no"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<title>KIM JOON HEE | Portfolio</title>
 	</head>
 	<body>
 		<div id="root"></div>
